<resources>
    <string name="app_name">WePartyAllNight</string>
    <string name="titre">Inscription</string>
    <string name="textPseudo">Pseudo</string>
    <string name="example_pseudo">ex: John</string>
    <string name="textPwd">Mot de passe</string>
    <string name="hintPassword">**********</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="logo">logo</string>
    <string name="image_fond">image</string>
    <string name="pseudo_text">pseudo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DashbordText">Dashboard</string>
    <string name="invition_text">Invitations</string>
    <string name="new_text">New</string>
    <string name="envents_text">envents</string>
    <string name="my_list_text">my list</string>
    <string name="text_banner_event">Events</string>
</resources>