<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/titre"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="175dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textPseudo"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/example_pseudo"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral_variant50" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textNum"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="#000000"
            android:ems="10"
            android:hint="@string/inputNumber"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral_variant50" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="52dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#000000"
            android:backgroundTint="@color/black"
            android:text="@string/se_connecter"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#000000"
            android:backgroundTint="@color/black"
            android:text="@string/s_inscrire"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>